# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\Auth\AuthController;
 use App\Http\Controllers\Api\CheckTypeController;
 use App\Http\Controllers\Api\Internal\InternalCheckResultController;
 use App\Http\Controllers\Api\SiteController;
+use App\Http\Controllers\Api\SiteHistoryController;
 use App\Http\Middleware\InternalMonitorMiddleware;
 use Illuminate\Support\Facades\Route;
 
@@ -15,6 +16,7 @@ Route::middleware(['frontend.key'])->group(function () {
         Route::post('/logout', [AuthController::class, 'logout'])->name('logout');
 
         Route::apiResource('sites', SiteController::class);
+        Route::get('sites/{site}/history', [SiteHistoryController::class, 'index'])->name('sites.history');
         Route::get('/check-types', [CheckTypeController::class, 'index'])->name('check-types.index');
     });
 });
